Create about and 404 pages

--- a/src/static/about.html
+++ b/src/static/about.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homepage</title>
+  <title>About</title>
 </head>
 
 <body>
-  <h1>Welcome!</h1>
-  <p>This is my homepage rendered with Node.js and TypeScript.</p>
-
+  <h1>About!</h1>
+  <p>Welcome to my about page!</p>
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
