--- a/src/static/dad-joke.html
+++ b/src/static/dad-joke.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>Dad Joke</title>
 </head>
 
 <body>
-  <h1>About!</h1>
-  <p>Welcome to my about page!</p>
+  <h1>A Random Dad Joke!</h1>
+  <p>{{joke}}</p>
+
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
