--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,6 +15,7 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li>
+      <li><a href="/dad-joke">Dad Joke</a></li>
     </ul>
   </nav>
 </body>
